# i3

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMDMODE  CONTRIBUTING.md  Changes  DEPENDS  GOALS  I3_VERSION  LICENSE  MANIFEST  MANIFEST.SKIP  Makefile  Makefile.PL  Makefile.am  PACKAGE-MAINTAINER  README  README.md  README.tree  RELEASE-NOTES-3.a-bf1  RELEASE-NOTES-3.b  RELEASE-NOTES-3.c  RELEASE-NOTES-3.d  RELEASE-NOTES-3.d-bf1  RELEASE-NOTES-3.e  RELEASE-NOTES-3.e-bf1  RELEASE-NOTES-3.e-bf2  RELEASE-NOTES-3.e-bf3  RELEASE-NOTES-4.0  RELEASE-NOTES-4.0.1  RELEASE-NOTES-4.0.2  RELEASE-NOTES-4.1  RELEASE-NOTES-4.1.1  RELEASE-NOTES-4.1.2  RELEASE-NOTES-4.10  RELEASE-NOTES-4.10.1  RELEASE-NOTES-4.10.2  RELEASE-NOTES-4.10.3  RELEASE-NOTES-4.10.4  (+89 more)
.github/: CONTRIBUTING.md  GOVERNANCE.md  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: main.yml
AnyEvent-I3/: Changes  MANIFEST  MANIFEST.SKIP  Makefile.PL  README
AnyEvent-I3/t/: 02-sugar.t  manifest.t
blog/: _config.yml  atom.xml  index.html
blog/_layouts/: default.html  post.html
blog/_posts/: 2010-10-07-faster-workspace-switching.markdown
contrib/: auto-mark  dump-asy.pl  gtk-tree-watch.pl  i3-dmenu-desktop  i3-wsbar  per-workspace-layout.pl  show-download-count.sh  sticker-7x5cm-stickma.tif.lzma  trivial-bar-script.sh
debian/: changelog  control  copyright  i3-wm.doc-base  i3-wm.docs  i3-wm.install  i3-wm.links  i3-wm.lintian-overrides  i3-wm.manpages  i3-wm.menu  i3-wm.wm  rules  watch
debian/patches/: manpage-x-terminal-emulator.patch  series  use-x-terminal-emulator  use-x-terminal-emulator.patch
debian/upstream/: signing-key.asc
docs/: Makefile  asciidoc-git.conf  bigpicture.asy  bigpicture.xcf  debugging  debugging-release-version  docs.mk  hacking-howto  i3-pod2html  i3-sync-working.dia  i3-sync.dia  i3bar-protocol  i3bar-workspace-protocol  ipc  ipc.html  layout-saving  multi-monitor  refcard.html  refcard.tex  refcard_style.css  testsuite  tree-migrating  userguide  wsbar  wsbar.dia
docs/GPN-2009-06-27/: i3.tex  reparenting.dia  reparenting.eps  screenshot.ps  xft.eps  xserver_konzept.dia  xserver_konzept.eps
docs/NoName-2009-03-12/: i3.tex
docs/slides-2012-01-25/: i3.tex
docs/slides-2012-03-16/: i3.tex
etc/: config  config.keycodes
i3-config-wizard/: Makefile  atoms.xmacro  cfgparse.l  cfgparse.y  i3-config-wizard-atoms.xmacro.h  i3-config-wizard.mk  ipc.c  ipc.h  main.c  xcb.c  xcb.h
i3-dump-log/: Makefile  i3-dump-log.mk  main.c
i3-input/: Makefile  convmap.pl  i3-input.h  i3-input.mk  ipc.c  keysym.map  keysym2ucs.c  keysym2ucs.h  main.c  ucs2_to_utf8.c  xcb.c
i3-msg/: Makefile  i3-msg.mk  main.c  reformat.c  reformat.h
i3-nagbar/: Makefile  atoms.xmacro  i3-nagbar-atoms.xmacro.h  i3-nagbar.h  i3-nagbar.mk  main.c  xcb.c
i3bar/: .gitignore  CHANGELOG  LICENSE  Makefile  common.mk  i3bar.mk
i3bar/doc/: Makefile  i3bar.man
i3bar/include/: cairo_util.h  child.h  common.h  config.h  configuration.h  determine_json_version.h  draw_util.h  graph.h  ipc.h  layer.h  mode.h  outputs.h  util.h  (+6 more)
i3lock/: LICENSE  config.mk  slock.c
include/: all.h  assignments.h  atoms.xmacro  atoms_NET_SUPPORTED.xmacro  atoms_rest.xmacro  bindings.h  click.h  client.h  cmdparse.h  commands.h  commands_parser.h  con.h  config.h  config_directives.h  config_parser.h  configuration.h  container.h  data.h  debug.h  display_version.h  drag.h  ewmh.h  fake_outputs.h  floating.h  font.h  gaps.h  handlers.h  i3-atoms_NET_SUPPORTED.xmacro.h  i3-atoms_rest.xmacro.h  i3.h  ipc.h  key_press.h  layout.h  libi3.h  load_layout.h  log.h  main.h  manage.h  match.h  move.h  (+27 more)
libexec/: i3-session-start
libi3/: Makefile  README  boolstr.c  create_socket.c  dpi.c  draw_util.c  fake_configure_notify.c  font.c  format_placeholders.c  g_utf8_make_valid.c  get_colorpixel.c  get_config_path.c  get_exe_path.c  get_mod_mask.c  get_process_filename.c  get_socket_path.c  get_visualtype.c  ipc_connect.c  ipc_recv_message.c  ipc_send_message.c  is_background_set.c  is_debug_build.c  libi3.mk  load_font.c  mkdirp.c  nonblock.c  path_exists.c  resolve_tilde.c  root_atom_contents.c  safewrappers.c  screenshot_wallpaper.c  string.c  strndup.c  ucs2_conversion.c
m4/: ax_code_coverage.m4  ax_enable_builddir.m4  ax_extend_srcdir.m4  ax_sanitizers.m4
man/: Makefile  asciidoc.conf  asciidoc.conf.in  i3-config-wizard.man  i3-dump-log.man  i3-input.man  i3-list-bindings.man  i3-migrate-config-to-v4.man  i3-msg.man  i3-nagbar.man  i3-sensible-editor.man  i3-sensible-pager.man  i3-sensible-terminal.man  i3.man  i3bar.man  man.mk
meson/: meson-dist-script  meson-install-i3-with-shmlog
parser-specs/: commands.spec  config.spec  highlighting.vim
release-notes/: generator.pl
render-tree/: Con.pm  render.pl
src/: Makefile  assignments.c  bindings.c  cfgparse.l  cfgparse.y  click.c  client.c  cmdparse.l  cmdparse.y  commands.c  commands_parser.c  con.c  config.c  config_directives.c  config_parser.c  container.c  debug.c  display_version.c  drag.c  ewmh.c  fake_outputs.c  floating.c  font.c  gaps.c  handlers.c  i3.mk  ipc.c  key_press.c  layout.c  load_layout.c  log.c  main.c  mainx.c  manage.c  match.c  move.c  multi_draw.c  nc.c  output.c  randr.c  (+21 more)
systemd/: i3-session.service
t/: 00-load.t  01-workspaces.t  boilerplate.t
testcases/: .gitignore  Makefile  Makefile.PL  Xdummy  complete-run.pl  complete-run.pl.in  i3-test.config  inject_randr1.5.c  new-test  restart-state.golden  valgrind.supp
tests/: queue.h  swap.c  test_table.c
travis/: bintray-autobuild-debian.json  bintray-autobuild-ubuntu.json  check-formatting.sh  check-safe-wrappers.sh  check-spelling.pl  clang-analyze.sh  cleanup-bintray.pl  debian-build.sh  deploy-github-pages.sh  docker-build-and-push.sh  docs.sh  ha.sh  prep-bintray.sh  push-balto.sh  run-tests.sh  skip-pkg.sh  travis-base-386.Dockerfile  travis-base-ubuntu-386.Dockerfile  travis-base-ubuntu.Dockerfile  travis-base.Dockerfile
website/: impress.html  index.html  robots.txt  sitemap.xml
(+491 files in other folders)
